--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -160,5 +160,51 @@ git push
 
 
 
+# 8021回顾
 
+知识体系：硬件、网络、软件、项目
+
+项目管理：项目、项目管理PDCA、人力资源、沟通、配置【git】
+
+
+
+
+
+# 网络安全基础
+
+![image-20230822094611865](image-20230822094611865.png)
+
+
+
+
+
+802.3	以太网的工作方式
+
+采用争用介质：  先听后发，边听边发，冲突停止，随机延迟后重发      【解决了使用信道的问题】
+
+![image-20230822100549078](image-20230822100549078.png)
+
+发送和接收的问题：【物理地址】
+
+通常称之为MAC地址，出厂自带全球唯一   48位地址，    使用16进制表示
+
+常见的MAC地址： 取值范围  0-F   ，  全1的地址为广播地址   FF-FF-FF-FF-FF-FF  ,  全0地址 包装  源地址  ，
+
+第8位地址为1，代表组播地址，   0 代表单播地址   
+
+通过    ipconfig   /all    或者   ifconfig   
+
+数据的识别问题：  包的格式  
+
+![image-20230822102636019](image-20230822102636019.png)
+
+
+
+结合   arp工具   ，  操作   mac地址已经绑定关系
+
+
+
+## 任务1：阐述海明码的工作机制以及C++实现。
+
+## 任务2：阐述arp协议以及arp命令工作机制及安全防范措施。
 
