--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -172,11 +172,13 @@ git push
 
 # 网络安全基础
 
+## 1	体系结构概览
+
 ![image-20230822094611865](image-20230822094611865.png)
 
 
 
-
+## 2	主机接口层
 
 802.3	以太网的工作方式
 
@@ -204,7 +206,92 @@ git push
 
 
 
-## 任务1：阐述海明码的工作机制以及C++实现。
+### 任务1：阐述海明码的工作机制以及C++实现。
 
-## 任务2：阐述arp协议以及arp命令工作机制及安全防范措施。
+### 任务2：阐述arp协议以及arp命令工作机制及安全防范措施。
 
+
+
+## 网络层
+
+选路【路径选择】，识别，隔离
+
+识别的问题：    协议封装格式   IP协议包
+
+![image-20230822135007691](image-20230822135007691.png)
+
+IP协议的特点：无连接，不可靠， 尽最大努力服务（TTL --- 解决环路问题）
+
+TTL的协商是由双端通信方确定的，
+
+### 课堂练习：利用ping  草拟出   到达  202.118.66.66  的网络路径， 探测路径的MTU
+
+
+
+逻辑层， 利用ip地址进行身份识别 ， 利用ip进行隔离
+
+## IP4地址
+
+32位的逻辑地址，   采用   点分十进制表示   ，    分为   4个字节用点分隔，    1.2.3.255  ，每字节   0-255
+
+IP地址 =  网络号   +   主机号   ，    默认情况下不同网络号的主机不能直接通信，   借助于路由器进行通信
+
+通常   会将  IP分为    多种类别
+
+![image-20230822145741020](image-20230822145741020.png)
+
+例如：   
+
+1.2.3.4	和	133.2.3.4   是不是逻辑上的一个网段：false
+
+1.2.3.4   和   1.6.7.8    是不是逻辑上的一个网段 ： True
+
+1.2.3.4   和   2.6.7.8    是不是逻辑上的一个网段 ： false
+
+192.168.2.6   请问网络号    192.168.2        主机号    6
+
+通过  子网掩码  标识  网络号部分（用1标识）和主机号部分（用0 表示）
+
+1.2.3.4   子网掩码   255.0.0.0【默认】
+
+出于VLSM或CIDR的需求。需要人为改动子网掩码进行网络的切分【延长VLSM】和汇聚【缩短CIDR】
+
+例如：  单位申请了一个IP段   199.9.9.0 /24  / 255.255.255.0     ， 需要分为4个逻辑网段。
+
+需要借用几位主机号用以分隔：  2位
+
+每网段IP范围：   
+
+​	199.9.9.0  -  199.9.9.63	             		  /26    /  255.255.255.192
+
+​	199.9.9.64  -  199.9.9.127            		   /26    /  255.255.255.192
+
+​	199.9.9.128  -  199.9.9.191            		/26    /  255.255.255.192
+
+​	199.9.9.192  -  199.9.9.255            		/26    /  255.255.255.192
+
+判断是否能够直接通信的依据是：  IP二进制位与子网掩码 ，结果是网络号，相同则可以直接通信
+
+199.9.9.0  和   199.9.9.64   不一样，必须通过路由器通信
+
+
+
+课堂演练： 本单位申请了一个   166.6.0.0/16网段， 全国有3个办事处和一个总部，  规模分别是   北京32000个， 上海   16000个，  重庆8000个，大连总部8000个。
+
+规划各个区域的ip地址范围，包括   网络地址和实际可用地址
+
+
+
+特殊的IP地址：
+
+0.0.0.0	表示任意网段，作为目的地址表示任意一个ip
+
+255.255.255.255	表示有限广播地址，等同于  FF-FF-FF-FF-FF-FF
+
+合法网络号 + 全0主机号    表示的是网段的地址        192.168.3.0/24
+
+合法网络号 + 全1主机号	表示的是网段的直接广播地址		192.168.3.255
+
+回环地址：  127.x.x.x   本地回环测试，不通过物理接口直走协议缓冲区
+
+私有IP，  只能在局域网通信   （10.x.x.x/8     ,  172.16.x.x/16 - 172.31.x.x /16    ,   192.168.x.x/24   ,  169.254.x.x  / 16 ）
