--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -295,3 +295,110 @@ IP地址 =  网络号   +   主机号   ，    默认情况下不同网络号的
 回环地址：  127.x.x.x   本地回环测试，不通过物理接口直走协议缓冲区
 
 私有IP，  只能在局域网通信   （10.x.x.x/8     ,  172.16.x.x/16 - 172.31.x.x /16    ,   192.168.x.x/24   ,  169.254.x.x  / 16 ）
+
+
+
+课堂演练： 本单位申请了一个   166.6.0.0/16网段， 全国有3个办事处和一个总部，  规模分别是   北京32000个， 上海   16000个，  重庆8000个，大连总部8000个。
+
+规划各个区域的ip地址范围，包括   网络地址和实际可用地址
+
+
+
+网络号16位 + 主机号16位，  可用的IP   2^16 - 2 = 65534个   
+
+VLSM  延长子网掩码   切分的过程，借用主机号部分作为子网络号部分
+
+1	2	3	4	5	6	7	8      .    1	2	3	4	5	6	7	8
+
+0	0	0	0
+
+0	1	1	1
+
+1	0	0	0	0
+
+​			1	1	1		
+
+1	1	0	0	0
+
+​				  1	1
+
+1	1	1	0	0
+
+​				  1	1
+
+166.6.0.0【子网段】~166.6.127.255【直接广播】     /   17  /255.255.128.0    容纳   32765-2主机【北京】
+
+166.6.128.0【子网段】~166.6.191.255【直接广播】/   18  /255.255.192.0    容纳   16385-2主机【上海】
+
+166.6.192.0【子网段】~166.6.223.255【直接广播】/   19  /255.255.224.0    容纳   8192-2主机【重庆】  
+
+166.6.224.0【子网段】~166.6.255.255【直接广播】/  19  /255.255.224.0    容纳   8192-2主机【大连】  
+
+
+
+网络层的路由，根据IP包头的目的地址进行选路 ，  选路的依据是路由表， 路由表一般分为静态（手工维护）和动态（路由器自动学习），路由表的组成（路由类型，路由成本，下一跳）
+
+
+
+如何维护路由表：
+
+windows和linux 本身带有软路由。如何获取以及修改
+
+windows：  router   print
+
+linux：  route
+
+
+
+路由的类型：
+
+​	直连路由C，  只要网络接口配置IP并且接口是激活状态，形成直连路由，成本为0  
+
+​	静态路由S，   关注  目标网段、目标网段的子网掩码，下一跳
+
+​	默认路由S*，最后一条匹配的路由选项【优先级最低】， 俗称 默认网关【0.0.0.0】
+
+​	
+
+路由匹配过程中， 遵循   掩码长度原则，  掩码越长优先级越高
+
+
+
+### 课堂项目：小组为单位实现，通过虚拟机或者wsl方式实现通过手工添加路由进行windows和linux之间的通信【虚拟机平台的构建，路由操作，文档记录】，成果物   路由基础.md   发送到小组群即可
+
+
+
+## 模拟实现企业网络环境，借助于模拟器可以模拟  交换机、路由器等
+
+只能使用   192.168.1.0/24网段
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
