--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -376,6 +376,77 @@ linux：  route
 
 
 
+# 上周回顾
+
+1	网络体系结构
+
+2	数据链路层【8022.3 】arp 
+
+3	网络层【ip】路由表，静态路由
+
+4	项目管理【项目，资源，沟通】
+
+
+
+
+
+# IOS的使用
+
+网络设备运行的操作系统， 提供   CLI 【命令行】  功能   ，   管理设备
+
+管理设备都有什么方式？  web管理端，命令行，console连接【初始化】
+
+
+
+ios   其实是unix的变体
+
+1	tab补齐  ，补齐命令和  参数   ,  能补齐代表可以缩写
+
+2	上下方向键 ，翻阅历史记录
+
+3	history调取所有历史记录
+
+4	？  查阅帮助
+
+
+
+通过命令字实现基本操作
+
+课堂演练：实现网络基本布局图【配置使用CLI完成】
+
+
+
+网络设备：
+
+集线器：  HUB   ，  物理层连接设备 ，    共享带宽，一个冲突域
+
+![image-20230828095457422](image-20230828095457422.png)
+
+交换机【二层】，Switch     ，  数据链路层  连接设备，    共享带宽，虚拟通道， 切割冲突域
+
+![image-20230828095833110](image-20230828095833110.png)
+
+
+
+路由器【三层】， router，   网络层连接设备  ，    切割广播域
+
+![image-20230828100429793](image-20230828100429793.png)
+
+
+
+
+
+全局模式对设备生效的（conf   t）， 接口模式(int 接口名)只对当前接口生效
+
+![image-20230828101515442](image-20230828101515442.png)
+
+
+
+# 交换机的工作方式
+
+根据  端口和MAC地址映射表（自动数据帧源地址学习--动态（300S））进行转发操作 ，如果不存在条目，则广播（除了输入口之外的所有口）【arp广播——源地址发送者地址，目的地址FF-FF-FF-FF-FF-FF】，实际接收者回应   单播   信息。
+
+![image-20230828110036976](image-20230828110036976.png)
 
 
 
@@ -385,8 +456,31 @@ linux：  route
 
 
 
+# 局域网网络安全
+
+1	使用虚拟局域网     VLAN
+
+2	VLAN用以切割广播域
+
+3	在数据帧添加头部信息用以识别， 通常是在交换机上执行 添加/拆除操作  。
+
+4	VLAN的形式：  802.1Q 标准  ，   ISL标准
+
+![image-20230828111621450](image-20230828111621450.png)
 
 
+
+5	VLAN注意：   VLAN1是默认的不可删除的默认所有端口都在VLAN1的  ， VLAN根据id不同进行匹配 ，VLANid  从   1 -4096  ，建议规划方式      100，200，300
+
+6	vlan有两种模式：  接入模式access（只能访问1个vlan信息）  ，  干道模式trunk（利用一条线路传输多个VLAN数据）
+
+
+
+
+
+
+
+ 
 
 
 
