--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -362,7 +362,7 @@ linux：  route
 
 路由匹配过程中， 遵循   掩码长度原则，  掩码越长优先级越高
 
-
+277-711-380
 
 ### 课堂项目：小组为单位实现，通过虚拟机或者wsl方式实现通过手工添加路由进行windows和linux之间的通信【虚拟机平台的构建，路由操作，文档记录】，成果物   路由基础.md   发送到小组群即可
 
@@ -474,13 +474,49 @@ ios   其实是unix的变体
 
 6	vlan有两种模式：  接入模式access（只能访问1个vlan信息）  ，  干道模式trunk（利用一条线路传输多个VLAN数据）
 
+```shell
+SW>enable	#进入特权模式
+sw#show vlan	#查看vlan配置信息
+sw#configure terminal	#进入全局配置模式
+sw(conf)#vlan  100		#添加id为100 名称为  vlan0100的vlan
+sw(conf-vlan)#vlan  200		#添加id为200 名称为  vlan0200的vlan
+sw(conf)#interface fa0/1	#进入端口配置模式
+sw(conf-if)#switchport mode access	#设置当前端口为access接入模式
+sw(conf-if)#switchport access vlan 100	#当前端口可以访问vlan 100
+sw(conf-if)#exit
+sw(conf)#interface range fa0/2-9	#同时进入多个接口配置
+sw(conf-if)#switchport mode access	#设置当前端口为access接入模式
+sw(conf-if)#switchport access vlan 200	#当前端口可以访问vlan 200
+sw#show vlan
+
+
+```
 
 
 
 
 
+# Vlan trunk
 
- 
+需要公共通道传递多个vlan的数据，一条线路承载多个vlan的通信，  解决access占用过多线路
+
+Trunk通信时类似于包转发方式，   干道上的所有帧都带有vlan标记
+
+![image-20230829102142648](image-20230829102142648.png)
+
+
+
+ 单臂路由，实现不同vlan之间的通信，路由器的物理接口可以绑定多个逻辑子接口
+
+路由和交换基础实验
+
+提交： markdown文档， 打包提交至  微信群
+
+文档内容：概念，使用场景，实现步骤（配置命令+截图）
+
+先决条件：申请到了199.9.9.0/24网段
+
+![image-20230829135051556](image-20230829135051556.png)
 
 
 
