--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -570,6 +570,106 @@ RIPV2	采用组播地址    224.0.0.9宣告【推荐】
 
 路由器的id通常是回环地址，  回环地址通常用作远程管理路由器
 
+二层交换机可以配置ip，配置给vlan，只能用作管理地址
+
+
+
+网络层主要协议：
+
+![image-20230831085618280](image-20230831085618280.png)
+
+ping     测试网络双向联通性的，发送ICMP包，通常有2个类型（0，8）
+
+-l		65500   指定发送的包大小
+
+-t		持续
+
+![image-20230831092921048](image-20230831092921048.png)
+
+# 传输层
+
+负责端对端业务，只需要关心发送和接收两端，中间过程不考虑。
+
+主要实现协议有     TCP，UDP
+
+TCP：传输控制协议，可靠的，面向连接的，数据流，全双工   ，稳定的服务器需要TCP
+
+UDP：User  Datagram    protocol用户数据报协议，     不可靠，非面向连接，数据报   ，实时通信用UDP   ，如果下层不能确保可靠性，则可靠性由上层负责
+
+TCP协议
+
+![image-20230831102513029](image-20230831102513029.png)
+
+
+
+
+
+TCP工作流程
+
+![image-20230831110852517](image-20230831110852517.png)
+
+
+
+课堂实践： 使用网络抓包工具  tcpdump,iris,fiddler, wireshark     浏览器地址栏输入     http://search.dangdang.com/?key=tcp+ip&category_path=01.49.00.00.00.00      描述按下回车后工作过程，通过包分析  联通过程以及  携带的关键字   ：通过MD格式按组提交
+
+
+
+# 通过TCP实现通信
+
+参考思路：   一切皆文件
+
+![image-20230831150420756](image-20230831150420756.png)
+
+如何实现：C或C++【建议】
+
+
+
+
+
+
+
+
+
+# 应用层服务
+
+通用终端，HTTP，DNS，邮件 ，  ...................................
+
+
+
+实现HTTP+DNS服务，   都是基于    C/S   结构的， 
+
+基础平台：   虚拟机 + 虚拟系统（windows2003 server）  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
