--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -640,25 +640,125 @@ TCP工作流程
 
 基础平台：   虚拟机 + 虚拟系统（windows2003 server）  
 
+![image-20230901084733285](image-20230901084733285.png)
+
+通用的服务，使用开源的已成型。
+
+操作系统： 负责   会话层，表示层，应用层  ， 以windows2003为例
+
+实现HTTP服务器：
+
+1	HTTP，超文本传输协议，明文传输，典型的C/S结构模型，C使用了通用的客户端{浏览器}，被称为B/S结构，HTTP包头含有
+
+1.1	方法，   GET，POST，OPTIONS，DELETE，PUT   代表一种操作，   语义化编程
+
+1.2	状态码【通用】，2xx  成功   ，  3xx路由，4xx资源错误，5xx服务器程序错误
+
+1.3	结合MIME（多用途的internet邮件扩展————扩展名）处理文件
+
+1.4	无状态协议
+
+![image-20230901091418939](image-20230901091418939.png)
+
+
+
+2	HTTP服务器的实现
+
+选择   ：     IIS，      Apache    ，   Tomcat    ，   Ngnix      ，     IIS是windows服务器系统自带功能， 通过添加删除windows组件    ，  安装   IIS   （Internet   Information  Service）
+
+
+
+3	web站点有3种形式【一个服务器运行多个web】
+
+3.1	不同ip地址
+
+3.2	同IP不同端口
+
+3.3	同ip同端口不同主机头
 
 
 
 
 
+课堂实现：   通过同ip同端口不同主机头实现，在客户端   访问    www.a.com    www.b.com     ，   通过修改客户端   hosts   文件实现静态的域名和Ip的映射关系
+
+![image-20230901100904796](image-20230901100904796.png)
+
+
+
+虚拟机克隆实现多个windows系统后，  需要更改计算机名称，必要时需要更改   SID
+
+
+
+所有的访问者都得修改hosts文件   ，  应该通过DNS取代
+
+# DNS
+
+Domain  name   server  域名字服务，负责   域名和IP的相互映射
+
+DNS采用   分层   分布式   数据库方式
+
+![image-20230901140623028](image-20230901140623028.png)
+
+
+
+DNS的解析过程
+
+![image-20230901142036290](image-20230901142036290.png)
+
+## 实现DNS服务器
+
+1	安装
+
+![image-20230901145411575](image-20230901145411575.png)
+
+![image-20230901150054004](image-20230901150054004.png)
+
+![image-20230901150129376](image-20230901150129376.png)
+
+2	配置
+
+主要区域：负责区域数据的编辑【增，删，改】，
+
+辅助区域：主要区域的备份，可以和主要区域负载均衡，
+
+主要区域到辅助区域的同步称为  区域复制   ，  使用TCP的53端口
+
+DNS的默认请求使用  UDP   53 端口 
+
+DNS域名的构成：    点分逆序，256字符，64分层 
+
+
+
+![image-20230901150747041](image-20230901150747041.png)
+
+开启客户端进行测试
+
+1	配置本地DNS![image-20230901152011082](image-20230901152011082.png)
+
+
+
+## DNS客户端测试工具
+
+ping   ：   ping   www.baidu.com
+
+nslookup :        
+
+1	直接方式
+
+![image-20230901142657624](image-20230901142657624.png)
+
+2	交互方式
+
+![image-20230901143434562](image-20230901143434562.png)
 
 
 
 
 
+# 大作业
 
-
-
-
-
-
-
-
-
+![image-20230901153948509](image-20230901153948509.png)
 
 
 
