--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -770,6 +770,56 @@ nslookup :
 
 
 
+# 如何确保服务器安全
+
+网络安全使用防火墙
+
+数据的安全【加密，权限，备份，存储】
+
+## 权限管理
+
+权限管理基于  sid（windows的安全id）  或   id（类unix系统）
+
+1	课堂实验：    创建一个普通用户【隐藏用户】   ，使其拥有超级管理员权限  。让一个普通用户拥有root的权限。
+
+1.1	通过   net命令可以执行  网络操作
+
+1.2	windows中 ，$结尾代表   隐藏    ，    例如   C$   默认的隐藏共享， 建议关闭  
+
+1.3	windows中，  用户信息储存在   c:\windows\system32\config\sam   文件中，   注册表中    HKEY_LOCAL_MACHINE\SAM\SAM   中
+
+
+
+为了便于权限分配，   通过组给用户集体授权，    组的权力会被组内用户继承。    
+
+复合授权过程：  用户可以属于多个组， 用户的权限是多组权限的复合，权限有冲突，拒绝最大。
+
+
+
+linux授权机制：   
+
+用户管理【userXXX】，组管理[groupXXX]，  文件所属管理【chown，chgrp】，权限管理【chmod   ， augo用户助记符，+-=  赋权操作，  rwx权限助记符 ，   可以使用   8进制处理   】
+
+
+
+小组作业：  
+
+公司  com   ，拥有  两个部门   sales和market   ，  其中user1，user2属于sales组，  user3，user4属于market组，    所有用户可以完全控制自己的目录，只读访问部门公共的目录   ，   管理员  admin  维护部门公共目录   。
+
+
+
+实现逻辑：  windows截图体现   ，  linux 通过shell脚本体现   
+
+
+
+
+
+
+
+
+
+
+
 
 
 
