--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -814,6 +814,93 @@ linux授权机制：
 
 
 
+用户是使用资源的主体，采用授权原则【DAC自主访问控制，MAC基于标记的强制访问控制，RBAC基于角色的授权-不能再授权】，   控制对资源的访问
+
+用户名称仅用于人类识别， 鉴权识别   sid   ，    id   ，   伪造超级用户身份
+
+文件权限的分配：  确保支持权限系统【NTFS ，  EXT】，权限由两个部分构成【本地文件权限--NTFS，EXT+共享权限CIFS，SMB】，权限可以被继承，权限有冲突，拒绝最大
+
+
+
+创建新文件的权限默认由   umask  设置  
+
+![image-20230905090648957](image-20230905090648957.png)
+
+
+
+
+
+
+
+# 存储
+
+硬盘【机械，固态】
+
+固态：电子存储模式，快，读写次数受限
+
+机械：适合长期存储， 价格低，高转速磁盘提供性能
+
+
+
+机械硬盘的存储机制
+
+![image-20230905093130105](image-20230905093130105.png)
+
+查看文件详情信息， 可以使用   stat命令
+
+截止：   10：00
+
+可以使用    软链接和硬链接进行文件管理
+
+软链接和原始文件是两个文件，通过引用关系关联，inode编号不同，原始文件不存在软链接失效，软链接可以跨磁盘存在   ，   ln   -s   创建软链接
+
+硬链接是通过不同位置或者不同名称访问同一文件的方式，  一个文件记录了多个文件名， links 为 1的时候再删除则从磁盘清除文件， 添加硬链接links+1，删除则-1   ， 不能跨磁盘   
+
+
+
+.	当前目录                   ..     父目录
+
+
+
+
+
+## 磁盘管理
+
+如果单个磁盘不能满足业务需求， 可以使用磁盘阵列组合方式实现用户需求【RAID--廉价磁盘冗余阵列】
+
+磁盘阵列和系统连接的方式：【DAS--直连式存储   ，   NAS-网络存储（接入标准TCP/IP网络）， SAN存储区域网络】
+
+
+
+windows下   基本磁盘只能实现：分区管理【主分区<=4+扩展分区<=1  =最多 4个  】
+
+主分区存储操作系统的引导记录，   扩展分区不能直接存储数据，需要划分为逻辑驱动器存储
+
+如果需要实现raid模式，必须是动态磁盘。
+
+raid的常见模式：
+
+业务需求：   存储 蓝光光盘大小   48G  xxx.iso    
+
+raid-0【降级版】   模式，   跨区卷模式 ，   合理组合多个磁盘的空闲空间为一个大型空间，  多个磁盘空间可以不同，线性存储模式，可靠性低。可用空间=贡献空间*1
+
+业务需求：   要求快速   读取写入  数据【无盘站服务器】  
+
+raid-0模式，     带区卷模式，多个磁盘共享相同大小空间，分布式存储，平均划分存储，读写速度最快 ，   可靠性低  ，可用空间=贡献空间*1
+
+![image-20230905133921587](image-20230905133921587.png)
+
+
+
+业务需求：  确保数据可靠，不应出现单点故障
+
+raid-1模式，     镜像卷模式，   两块磁盘共享相同大小空间， 同时写入，可以分布读出，   写入速度和单磁盘相同，读出速度可能优于单磁盘。可靠性提升 ，可用空间=贡献空间*0.5
+
+![image-20230905134018599](image-20230905134018599.png)
+
+raid-3或raid-5：  多磁盘贡献同等大小空间， 利用率   可用空间   =   贡献空间*(N-1)/N,    可靠（不能同时损坏2块）
+
+![image-20230905135128386](image-20230905135128386.png)
 
 
 
@@ -823,6 +910,33 @@ linux授权机制：
 
 
 
+
+
+关于可靠性的计算：
+
+MTBF =   平均无故障时间/（平均无故障时间+平均故障修复时间）
+
+![image-20230905110305835](image-20230905110305835.png)
+
+
+
+![image-20230905110726950](image-20230905110726950.png)
+
+
+
+
+
+磁盘划分空间之后，   需要格式化
+
+格式化：创建文件系统FS  ，   文件存取访问的方式叫做文件系统。   
+
+分区，卷     其实是空间称谓，     需要通过     挂载点【c:\  盘符   ，       /root   ,  还可以使用 文件夹作为挂载点】  访问空间
+
+
+
+研读    linux    LVM   实现动态磁盘管理   ，使用磁盘配额限制用户的可使用空间和inode数量
+
+提交md格式文档：    linux下实现LVM+raid+磁盘配额.md      附带    组内评分.txt(每人贡献5分)       
 
 
 
