--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -940,6 +940,100 @@ MTBF =   平均无故障时间/（平均无故障时间+平均故障修复时间
 
 
 
+存储，磁盘管理，DAS
+
+分区，卷（raid-0  1    5）【特点，可靠性，利用率】，LVM+raid
+
+![image-20230906090123552](image-20230906090123552.png)
+
+
+
+
+
+
+
+通过对存储设备进行管理：   
+
+1	raid	：  实现空间组合利用，可靠性提高
+
+2	LVM   ：   实现空间的弹性分配
+
+3	FS	  ：   实现权限分配
+
+4	mount   ：   访问点
+
+解决了部分硬件故障引发的数据安全问题，能否解决人为损坏数据？ 
+
+
+
+
+
+# 备份策略
+
+正常数据存储一个副本类消息， 以备损坏后恢复
+
+tarball   结合    zip工具  
+
+备份类型：
+
+1	完整备份：所有数据拷贝一个镜像内容，修改存档标记【备份标记】，消耗空间最大，恢复时间长，所有备份的基础。【可以采用的方案windows提供的backup工具(文件)，备份引导记录（磁道，MBR）使用 ghost  ，  使用   linux下的  dd  ， linux下备份工具  tar（文件） 】
+
+2	副本备份：完整备份， 不操作存档标记【备份标记】
+
+3	差异备份：备份和上次完整备份之间差异的部分，不修改备份标记，恢复时使用  完整备份  +   最后一次差异备份。
+
+4	增量备份：备份和上一次增量或者完整之间变动的部分，修改备份标记，恢复时使用完整+所有增量【linux下tar 的   -g  选项实现增量】
+
+
+
+![image-20230906100142740](image-20230906100142740.png)
+
+
+
+
+
+
+
+linux的命令：
+
+[root@localhost ~]#   命令字              选项             参数
+
+root	代表当前用户，   如果需要切换身份 ，    使用   su    switch user， 临时切换身份执行命令    sudo   
+
+localhost   代表当前主机名称
+
+~	代表当前所在目录，  可以通过   pwd   获取，     ~   代表用户宿主目录
+
+命令字和选项以及参数之间用    空格   分隔
+
+选项有两种：      -  短选项，  多个短选项可以压缩   -l   -i   -a      压缩为     -lia
+
+​							 --长选项，   完整单词，不可拆分
+
+ls   -R  -lia   --deeps  /
+
+man   关键字     获取帮助信息
+
+
+
+linux如何实现  ：    
+
+登录时备份：~/.profile
+
+开机时备份：/etc/rc.local
+
+周期性备份：cron   实现   
+
+
+
+课堂演练：     windows下实现  每10分钟进行完整备份， 每2分钟进行 增量备份，注意观察   备份标记，   模拟破坏数据然后恢复
+
+下午演练：     linux下实现
+
+
+
+
+
 
 
 
