--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1032,13 +1032,83 @@ linux如何实现  ：
 
 
 
+应用层服务层面实现：HTTP，FTP，DNS，
+
+![image-20230907085344917](image-20230907085344917.png)
+
+数据管理：授权，raid，lvm卷弹性，备份
+
+根据业务需求选择    数据管理方案。   网站  
+
+
+
+存储安全更多的是在内部应用中体现
+
+内网服务主要的服务对象是局域网用户，通常  DHCP   ，轻量级目录访问服务OLDP【windows 的  AD--域管理，linux下   NIS   】
+
+windows采用网络管理形式
+
+1	工作组模式   ：   workgroup   ，  管理方式是平等的， 非强制制约的，DAC原则 ，扁平式结构
+
+2	域        模式   ：   domain    ，        管理方式是集中的，强制制约       ，MAC原则，金字塔结构
+
+
+
+![image-20230907092536465](image-20230907092536465.png)
+
+
+
+设计：
+
+客户端需要由ip，服务器应该具备分配IP地址的能力，安装DHCP服务， 备份策略（完整+增量）
+
+域管理需要DNS支持，服务器应该安装DNS。备份策略（完整+增量）
+
+用户数据存放在raid5空间， 备份策略自选
+
+
+
+DHCP工作机制
+
+![image-20230907095050169](image-20230907095050169.png)
 
 
 
 
 
+1	设置服务器为静态ip
+
+2	安装dhcp服务
 
 
+
+安装DC
+
+![image-20230907102605833](image-20230907102605833.png)
+
+
+
+将客户机加入到域
+
+因为 虚拟机都是  克隆的， 所以   SID 相同，   重新封装获得新的SID
+
+
+
+放置在  raid5  磁盘中
+
+配置用户信息， 实现用户配置迁移
+
+共享文件方式，实现用户   网络驱动器访问共享文件【权限】
+
+
+
+所有文件有备份
+
+
+
+
+
+提交方式：     域管理综合实验(组内评分).zip
 
 
 
