--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -776,6 +776,8 @@ nslookup :
 
 数据的安全【加密，权限，备份，存储】
 
+安全审核等级：D，C1，C2【用户隔离--DAC--MAC】，B1,B2,B3,A1,A2
+
 ## 权限管理
 
 权限管理基于  sid（windows的安全id）  或   id（类unix系统）
@@ -1109,6 +1111,157 @@ DHCP工作机制
 
 
 提交方式：     域管理综合实验(组内评分).zip
+
+
+
+
+
+# DMZ安全部署
+
+DMZ： 非军事化区域， 放置对外发布的服务
+
+防火墙类型：
+
+单宿主堡垒主机：【宿主--代表网络连接】
+
+![image-20230908091144301](image-20230908091144301.png)
+
+双宿柱堡垒主机：【防止外部攻击】
+
+![image-20230908091532925](image-20230908091532925.png)
+
+三宿主DMZ区域：
+
+![image-20230908091841093](image-20230908091841093.png)
+
+背靠背DMZ区域：
+
+![image-20230908092136490](image-20230908092136490.png)
+
+防火墙类型：
+
+防火墙本质就是根据数据包分析，确定是否是攻击
+
+
+
+包过滤防火墙：工作在网络层
+
+链路状态防火墙：工作在传输层
+
+应用代理防火墙：工作在应用层
+
+![image-20230908093458683](image-20230908093458683.png)
+
+
+
+防火墙的分类
+
+软件类：   ipchains
+
+硬件类：   ASIC   实现过滤， 效率高
+
+
+
+根据业务规划防火墙：脚本化管理
+
+假设DMZ区域提供，web服务（HTTP，HTTPS），邮件服务，DNS服务，FTP服务，DMZ内的主机通过ssh方式管理。防火墙推荐使用centos实现
+
+![image-20230908100524157](image-20230908100524157.png)
+
+
+
+
+
+防火墙的规则中， 默认自上而下匹配，匹配到严格规则，则按最严格执行，默认最后一条拒绝所有
+
+
+
+
+
+
+
+
+
+平台安全
+
+应用安全
+
+
+
+
+
+![image-20230908133728249](image-20230908133728249.png)
+
+
+
+iptables结构：
+
+netfilter内核【调用系统区】
+
+ipchains   配置实现调用
+
+iptables  工具编写规则
+
+由三级组织实现： tables表，   chains链，rules规则
+
+表：filter，nat，mangle，raw表
+
+filter：默认表，   -t没有显式指定，则表为   filter，包含了  INPUT--处理来自外部的数据，OUTPUT-处理向外发送的数据，FORWARD【转发】，数据转发到本机之外的网络   链
+
+nat： 网络地址转换，    PREROUTING--处理刚到达本机在路由转发前的数据包，转换数据包的目标地址，做DNAT，用于发布DMZ的服务器，
+
+POSTROUTING--处理即将离开本机数据包，转换源地址，做SNAT，用于内网多个私有ip访问互联网
+
+OUTPUT链：
+
+![image-20230911091931966](image-20230911091931966.png)
+
+mangle表：修改数据包内容，可以修改TCP头的Qos字段
+
+raw表：处理异常
+
+规则Rules：
+
+匹配的目标 Target + 处理 Action
+
+基本命令格式
+
+```shell
+#iptables  -t  表名    选项    处理
+```
+
+基本常用命令[增删改查]
+
+```shell
+iptables --list    查看 filter 规则,  --list 等同于 -L
+iptables -t nat  --list   查看 nat 规则  
+iptables -A -t filter -j DROP    默认丢弃所有未匹配的包  									-A  尾部追加
+iptables -t filter -P INPUT DROP 修改默认策略(predefault)实现丢弃所有未匹配包
+
+iptables   --flush   清空已有规则， --flush 等同于   -F
+
+```
+
+规则的选项
+
+```shell
+all		默认的，不写代表all，【协议，ip，端口】
+-p	指定协议(网络层之上)【tcp 6 ,udp  17 ,icmp  8,igmp】，对于其他应用层相关协议建议使用   端口号识别
+-s	指定源ip，可以是单机或网络地址 [192.168.1.1 , 192.168.1.0/24]
+-d	指定目的ip
+--sport	源端口
+--dport 目的端口
+-i	入口接口名，    -i  ens33 ， 可以使用通配符   -i !ens33(除了ens33)   ， -i ens+(所有ens开头的接口)
+-o	出口接口名
+--tcp-flags 	指定TCP 标识字段【SYN，ACK，FIN，RST，URG】
+--icmp-type		0，8  
+
+
+```
+
+
+
+课堂练习：  内网  192.168.100.4，DMZ区域192.168.200.5 ，  外网合作伙伴 都能通过远程登录【telnet/SSH】(putty，xshell)实现对防火墙的管理。  
 
 
 
