--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1208,7 +1208,7 @@ iptables  工具编写规则
 
 filter：默认表，   -t没有显式指定，则表为   filter，包含了  INPUT--处理来自外部的数据，OUTPUT-处理向外发送的数据，FORWARD【转发】，数据转发到本机之外的网络   链
 
-nat： 网络地址转换，    PREROUTING--处理刚到达本机在路由转发前的数据包，转换数据包的目标地址，做DNAT，用于发布DMZ的服务器，
+nat： 网络地址转换，    PREROUTING--【prevent】处理刚到达本机在路由转发前的数据包，转换数据包的目标地址，做DNAT，用于发布DMZ的服务器，
 
 POSTROUTING--处理即将离开本机数据包，转换源地址，做SNAT，用于内网多个私有ip访问互联网
 
@@ -1263,5 +1263,65 @@ all		默认的，不写代表all，【协议，ip，端口】
 
 课堂练习：  内网  192.168.100.4，DMZ区域192.168.200.5 ，  外网合作伙伴 都能通过远程登录【telnet/SSH】(putty，xshell)实现对防火墙的管理。  
 
+```shell
+
+```
 
 
+
+iptables的规则   CRUD
+
+-L	--list	列出
+
+-A	--append	追加
+
+-I 4   --insert       插入到第4条
+
+-D	--delete	删除
+
+-R	--replace	更新替换
+
+
+
+NAT转换
+
+1	开启转发功能
+
+echo 1 >  /proc/sys/net/ipv4/ip_forward
+
+2	开启端口转发
+
+![image-20230912093131990](image-20230912093131990.png)
+
+3	开启转发规则
+
+![image-20230912095253327](image-20230912095253327.png)
+
+4	建议通过日志进行调试
+
+![image-20230912100100068](image-20230912100100068.png)
+
+
+
+
+
+
+
+linux虚拟机安装软件
+
+1	修改虚拟网卡类型为桥接模式（物理机网卡连接到非DNUI-CUCC）
+
+2	通过ifconfig可以看到获得了和物理机网卡同段的IP地址
+
+3	进入虚拟机执行如下命令实现修改源
+
+```shell
+mv /etc/yum.repos.d/Centos-Base.repo /etc/yum.repos.d/Centos-Base.repo.bak
+wget -O /etc/yum.repos.d/Centos-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo
+yum upgrade
+yum update
+```
+
+4	通过yum工具安装软件即可
+
+yum -y install xxxxx
