--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1325,3 +1325,94 @@ yum update
 4	通过yum工具安装软件即可
 
 yum -y install xxxxx
+
+
+
+
+
+回顾：
+
+网络拓扑安全结构：动态路由（负载均衡，动态线路切换），VLAN（通过路由转发，STP线路冗余和负载均衡）
+
+系统安全：用户安全， 文件权限【DAC，MAC，RBAC，ACL】
+
+存储安全：存储方式【DAS，NAS，SAN】，存储可靠性和效率【Raid+卷管理】，备份策略（依靠备份标记）【完整、差异、增量】
+
+防火墙：  netfilter       实现NAT，包过滤，伪装
+
+数据传输的安全：安全加密
+
+
+
+
+
+
+
+# 安全加密
+
+确保数据的  保密性，完整性（可用性），真实性（交易的不可抵赖）  性质
+
+防范     窃取  ，修改  ，中断  ，伪造    攻击
+
+采用的手段：加密
+
+常见的加密手段：    置换【P@ssw0rd】，   易位 【A->e】    
+
+常见的加密类型：
+
+![image-20230913095242587](image-20230913095242587.png)
+
+综合应用解决问题：   HTTPS，      PGP 【工作流程】
+
+ ![image-20230913102225672](image-20230913102225672.png)
+
+
+
+如何解决密钥的管理和分配问题
+
+使用通用结构      PKI        公钥基础结构   ，  权威的认证CA机构负责审核，认证，分发 证书。结合  RA 权威注册机构， 协调  申请 ，初审。  使得    服务器   和    用户    身份验证。
+
+
+
+对应关系：
+
+CA+RA     =    windows  证书服务
+
+服务器     =     IIS   发布   HTTPS（HTTP+SSL）服务  
+
+用户         =     安全访问（证书）
+
+
+
+参考：     windows   IIS   使用证书     
+
+1	windows证书服务通常是依赖于  web服务器进行发布的【在线处理】，支持ASP
+
+2	收集用户信息
+
+3	证书导入到服务器
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
