--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1396,23 +1396,118 @@ CA+RA     =    windows  证书服务
 
 
 
+# windows证书服务
+
+1	安装IIS附带   asp   扩展
+
+![image-20230914085707947](image-20230914085707947.png)
+
+
+
+![image-20230914090006493](image-20230914090006493.png)
+
+
+
+2	安装证书服务
+
+![image-20230914091012088](image-20230914091012088.png)
+
+3	访问证书系统页面，利用虚拟目录访问
+
+![image-20230914091048298](image-20230914091048298.png)
+
+
+
+4	申请个人证书【浏览器证书】
+
+![image-20230914091422672](image-20230914091422672.png)
+
+
+
+![image-20230914091933552](image-20230914091933552.png)
+
+5	服务器证书的使用--申请
+
+![image-20230914095749130](image-20230914095749130.png)
+
+6	服务器证书的使用--颁发并且导出
+
+![image-20230914100521087](image-20230914100521087.png)
+
+7	web服务器导入即可
 
 
 
 
 
+毕业设计：
+
+原则：   基于基础研究的实际应用，    思路整合    入口和出口
+
+自拟题目：下周一上课前提交【送审】，通过  撰写   开题报告
 
 
 
+# linux搭建DNS服务
 
+## 1	联网
 
+IP设置：1  命令行方式      【当前启动时生效】， 2   配置文件方式【终极方案】
 
+```
+#ifconfig ens33 192.168.153.233 netmask  255.255.255.0
+#route add default gw 192.168.153.1
+#vi /etc/resolv.conf
+添加一行     nameserver  192168.153.1
+```
 
+## 2	修改yum源
 
+略
 
+## 3	安装named服务【BIND】
 
+```shell
+#yum install -y bind bind-chroot  bind-utils
+#yum install -y bind bind*
+```
 
+## 4	启动named服务
 
+![image-20230915091308919](image-20230915091308919.png)
 
+## 5	named 配置文件
 
+/etc/named.conf    主配置文件
 
+![image-20230915091914726](image-20230915091914726.png)
+
+添加区域可以在     推荐的  rfc1912文件进行，  改动前先备份   
+
+ ```shell
+#cp -p  /etc/named.rfc1912.zones /etc/named.rfc1912.zones.bak
+ ```
+
+![image-20230915092854450](image-20230915092854450.png)
+
+添加区域声明
+
+![image-20230915094502798](image-20230915094502798.png)
+
+## 6	编写区域记录
+
+![image-20230915094842248](image-20230915094842248.png)
+
+![image-20230915100118041](image-20230915100118041.png)
+
+![image-20230915100223142](image-20230915100223142.png)
+
+## 7	启动服务【restart ，   reload】
+
+```shell
+# systemctl   restart  named.service
+```
+
+## 8	使用客户端工具检测【ping，nslookup，dig,host】
+
+![image-20230915100707322](image-20230915100707322.png)
