--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1540,7 +1540,7 @@ ifconfig    , ping      ,  traceroute     ,    netstat
 
 windows查看进程方式：任务管理器
 
-linux系统查看进程方式：ps,pstree，top
+linux系统查看进程方式：ps,    pstree，top
 
 2	进程的控制
 
@@ -1604,3 +1604,33 @@ cat /etc/passwd   |  grep "^a"    |   wc   -l
 
 
 课堂作业：  运行自己编写的脚本   ，   获取  30秒内，每隔3秒系统的状态信息（top），统计信息的记录数。 
+
+```shell
+#!/bin/bash
+
+top -d 3 -n 10 -b >> list.txt
+cat list.txt |  grep "bash"  | wc -l
+```
+
+
+
+
+
+
+
+linux下的         /proc    文件系统
+
+/proc是内存的映射，    用户和操作系统交互的接口，    查看进程类信息时本质上就是读取  /proc内容   ，   内存断电数据消失，/proc断电数据消失【无需备份】
+
+![image-20230919095055053](image-20230919095055053.png)
+
+
+
+![image-20230919101435176](image-20230919101435176.png)
+
+
+
+
+
+![image-20230919101503282](image-20230919101503282.png)
+
