--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1634,3 +1634,128 @@ linux下的         /proc    文件系统
 
 ![image-20230919101503282](image-20230919101503282.png)
 
+
+
+
+
+# 试验任务：实现自己基于console终端的监控工具
+
+## 1	安装gcc
+
+gcc 工具链（套件）， 包含编译器，预处理器，汇编，链接  ， 可编译c，c++，java
+
+```shell
+查看版本
+#gcc -v
+#yum install -y  gcc
+```
+
+
+
+gcc的基本使用
+
+```shell
+gcc  源文件1.......   -o   目标文件    
+gcc  源文件   -I头文件位置   -L库文件    -o    目标文件
+```
+
+![image-20230919141747999](image-20230919141747999.png)
+
+vi :     vi   -o2  文件1  文件2     同时编辑多个文件， ctrl+w跳窗口
+
+## 2	构建工具结构
+
+![image-20230919142304463](image-20230919142304463.png)
+
+![image-20230919142559458](image-20230919142559458.png)
+
+
+
+建议给头文件都加上守卫
+
+![image-20230919143623802](image-20230919143623802.png)
+
+验证环境的正确性
+
+## 3	编写子项功能
+
+![image-20230919151333142](image-20230919151333142.png)
+
+mycpu.c为例
+
+```c
+#include "mytools.h"
+#define LEN 512
+int main()
+{
+	//1	open file ,   open()  
+	int cpuFd = open("/proc/cpuinfo",O_RDONLY);
+	if(cpuFd == -1){
+		perror("open error");exit(9); 
+	}
+	
+	//2	loop read,write
+	char buff[LEN];
+	ssize_t nread=0;
+	ssize_t nwrite=0;
+	while((nread = read(cpuFd,buff,LEN)) > 0){
+		nwrite = write(1,buff,nread);
+		if(nwrite == -1){
+			perror("wrtie error"); exit(8);
+		}
+	}
+	//3	close file
+	close(cpuFd);
+}
+
+```
+
+## 4	编写界面类  app.c
+
+
+
+![image-20230919160526703](image-20230919160526703.png)
+
+```c
+#include "mytools.h"
+
+int main()
+{
+        int choice = 1;
+        while(1){
+                printf("===================mytools===================\n");
+                printf("1       mycpu\n");
+                //
+                printf("==============================================\n");
+                printf("please input choice:");
+                scanf("%d",&choice);
+
+                switch(choice){
+                        case 1:
+                                {
+                                pid_t pid = fork();
+                                if(pid == -1)
+                                        exit(7);
+                                if(pid == 0){//child process
+                                        printf("this is child process\n");
+                                        //exec  user define process
+                                        execl("./mycpu","mycpu",0);
+                                        printf("child........................\n");// nothing
+                                }else{
+                                        int ok = 0;
+                                        pid_t rpid = wait(&ok);
+                                        printf("child finished, current parent\n");
+                                }
+                                }
+
+                                break;
+                        default:
+                                printf("Bye\n");
+                                exit(0);
+                }
+        }
+        return 0;
+}
+     
+```
+
