--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1759,3 +1759,68 @@ int main()
      
 ```
 
+
+
+
+
+
+
+# vi使用
+
+unix体系下**通用**的文本编辑器，目前使用   vim  取代   vi   ,    vi 是vim的别名
+
+```
+#  yum  install -y  vim
+```
+
+
+
+![image-20230920092513832](image-20230920092513832.png)
+
+
+
+
+
+# 作业管理
+
+用户层面排队使用资源，通常消耗大量cpu和内存资源
+
+如果安排作业在   后端运行【不占用终端窗口】    ，   命令字  &
+
+```shell
+#ping  www.baidu.com &
+```
+
+可以通过  fg   bg实现作业的管理
+
+fg  序号   ：   将后台作业调度到前台
+
+bg	序号：   将前台作业调度到后台
+
+采用   kill     终止任务     ，   kill    信号   pid
+
+
+
+
+
+希望的掌握程度：
+
+1	简单利用系统监控工具实现性能监控，top   ps  vmstat    任务管理器
+
+2	系统状态接口（/proc）  ，  开发自己的性能监控工具
+
+3	使用已知的系统性能监控平台实现   ，windows  下的   “性能”   工具  ，linux整合平台
+
+4	开发自己的整合工具平台【基于http应用，基于GUI应用（Qt实现）】
+
+
+
+
+
+
+
+
+
+课堂检测：    实现一个简易版计算器的设计，灵活的进行单目，双目（+，-）运算，只要运算都会有结果产生， 弹性添加功能（*，/）。
+
+课后任务： 9月20日晚  17：00    提交      linux下性能工具作业
