--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1824,3 +1824,140 @@ bg	序号：   将前台作业调度到后台
 课堂检测：    实现一个简易版计算器的设计，灵活的进行单目，双目（+，-）运算，只要运算都会有结果产生， 弹性添加功能（*，/）。
 
 课后任务： 9月20日晚  17：00    提交      linux下性能工具作业
+
+
+
+
+
+C，C++  系统级编程语言，偏向于底层开发，重视安全和性能
+
+C++实现面向对象的语法，面向对象编程更加方便
+
+编程的2个思路：
+
+​	面向过程：拆解，类似于机器的解决方式
+
+​	面向对象：抽象，类似人的思考方式
+
+面向对象的四个特征：
+
+1	抽象：将计算机的问题域和现实问题域进行映射
+
+![image-20230921142719793](image-20230921142719793.png)
+
+2	封装  ：  成员属性，方法尽可能的 私有化， 通过  接口   setter/getter   访问成员属性
+
+3	继承  ：  复用代码的方式，派生类包含了父类的所有
+
+4	多态  ：  不同上下文 执行不同。【父类声明，子类创建对象】
+
+![image-20230921154937954](image-20230921154937954.png)
+
+
+
+
+
+对象和对象的关系（依次 紧密【耦合度高】）：
+
+依赖：        person.driver(Car car)
+
+关联：		持有对方对象       class   A{private：    Phone   phone；}
+
+聚集：		持有对方对象的集合     class    Car{private：     list<Wheel>  wheels;}
+
+组合：		持有对方对象的集合     class    Face{private：     list<Eye>  eye;}
+
+实现：        继承接口，复用父类的方法声明
+
+继承：		复用父类
+
+
+
+
+
+```c++
+#include <iostream>
+
+using namespace std;
+//	类库设计代码，不同类不同文件
+
+
+//规则的定义， 通过接口方式实现，C++中接口和类相同
+//接口类通常没有成员属性， 只有方法声明，由实现者覆写方法定义
+class  Calcable{
+	virtual int getResult() = 0;//纯虚函数
+};
+//	单目类
+class OneNum:public Calcable{
+	//封装性
+	private:
+		int m_a;
+	public:
+	//提供setter，getter，constructor
+	OneNum(int a_a):m_a(a_a){}
+	void setA(int a_a){
+		if(a_a < 0) 
+			this->m_a = -a_a;
+		else
+			this->m_a = a_a;
+	}
+	int getA(){return this->m_a;}
+};
+//双目类
+class TwoNum:public OneNum{
+	//封装性
+	public:
+		int m_b;
+	//提供setter，getter，constructor
+	TwoNum(int a_a,int a_b):OneNum(a_a),m_b(a_b){}
+	void setB(int a_b){
+		//OneNum::setA(a_a);
+		this->m_b = a_b;
+	}
+	int getB(){return this->m_b;}
+};
+
+
+//业务类
+class Add:public TwoNum{
+	public:
+		Add(int a_a,int a_b):TwoNum(a_a,a_b){}
+		int getResult(){
+			return this->getA() + this->getB();
+		}
+};
+
+class Sub:public TwoNum{
+	public:
+		Sub(int a_a,int a_b):TwoNum(a_a,a_b){}
+	int getResult(){
+			return this->getA() - this->getB();
+		}	
+};
+
+
+// 客户端代码，入口
+int main()
+{
+	Add* add = new Add(3,8);
+	cout << add->getResult() << endl;
+	return 0;
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
