--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -1949,6 +1949,29 @@ int main()
 
 
 
+# Qt实现跨平台GUI开发
+
+Qt开源跨平台图形框架【底层实现C++】
+
+Qt支持   个人免费    ，商业付费  两种授权
+
+Qt是模块化框架，可插拔
+
+![image-20230922090630880](image-20230922090630880.png)
+
+
+
+## 使用Qt
+
+![image-20230922091048038](image-20230922091048038.png)
+
+创建第一个Qt项目：   项目所在路径不能存在中文以及特殊字符（空格）
+
+使用框架的目的是什么？ 不重复造轮子
+
+![image-20230922092344280](image-20230922092344280.png)
+
+编辑    ui文件，  使用designer设计师工具拖拽  组件   到界面，  ctrl+R   运行查看即可
 
 
 
@@ -1956,8 +1979,59 @@ int main()
 
 
 
+## Qt项目的结构
+
+![image-20230922100342018](image-20230922100342018.png)
 
 
 
+案例：添加一个欢迎页面，点击确定按钮后跳转到    MyWidgwet页面
 
+1	添加 欢迎界面   ![image-20230922100826182](image-20230922100826182.png)
+
+2	修改界面内容
+
+3	修改  main.cpp   ,  使欢迎页面第一个出现
+
+```c++
+//#include "mywidget.h"
+#include "welcome.h"
+#include <QApplication>
+//程序入口
+int main(int argc, char *argv[])
+{
+    QApplication a(argc, argv);//qt框架
+//    MyWidget w;//创建界面对象
+//    w.show();//调用  继承自  QWidget 的show展示界面。
+    //创建一个  Welcome的对象
+    Welcome welcome;
+    //调用继承自 QWidget的show()显示
+    welcome.show();
+
+    return a.exec();  // 阻塞，开启循环监听 ， 监听事件
+}
+
+```
+
+4	在welcome.ui 文件添加按钮用以跳转页面
+
+![image-20230922101718976](image-20230922101718976.png)
+
+5	编写 对应的槽函数
+
+```c++
+void Welcome::on_runBtn_clicked()
+{
+    //显示第一个界面
+    MyWidget* mw = new MyWidget();
+    mw->show();
+
+    //mw->show();
+
+    qDebug() << "代码跑到该处了";
+
+    //隐藏欢迎界面
+    this->hide();
+}
+```
 
