--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -2035,3 +2035,69 @@ void Welcome::on_runBtn_clicked()
 }
 ```
 
+
+
+## 组件
+
+组件： 可以重复调用的代码段， Qt中  继承了  QWidget 的类   都是组件
+
+### 1	如何添加组件
+
+1.1	使用designer设计师   拖拽  
+
+1.2	代码添加组件
+
+```c++
+#include <QPushButton>
+
+....
+    
+//通过代码添加组件
+    QPushButton* myBtn = new QPushButton(tr("演示按钮"));//按钮会作为独立窗口展示，手工释放对象
+    myBtn->setParent(this);//设置父对象， myBtn作为  welcome的子部件展示，自动随welcome销毁而销毁【对象树】
+    myBtn->show();
+
+    //定制当前界面以及按钮,
+
+    this->setGeometry(300,500,800,600);
+    this->setWindowTitle(tr("欢迎界面"));
+    this->setFixedSize(800,600);
+    myBtn->setGeometry(QRect(10,480,200,100));//匿名对象写法
+```
+
+
+
+
+
+### 2	如何使用助手
+
+推荐独立打开助手
+
+![image-20230922141734967](image-20230922141734967.png)
+
+
+
+
+
+课堂练习： 欢迎界面要求   800*600  ，  绝对居中，    程序主界面   模拟一个QQ登录窗口
+
+![image-20230922145121373](image-20230922145121373.png)
+
+推荐使用布局管理器规划页面【弹性布局】
+
+
+
+
+
+Qt提供了标准常用的对话窗口供用户调用：  文件对话框，   字体对话框，   颜色对话框，  消息对话框(QMessageBox)......
+
+
+
+
+
+课堂任务：   设置一个按钮，点击按钮后打开字体对话框，选中字体被设置到该按钮上。
+
+
+
+
+
