20231008论文初始总结

--- a/课堂笔记.md
+++ b/课堂笔记.md
@@ -2206,6 +2206,27 @@ mysort(ma,5, compareTo)
 
 
 
+# 知识回顾
+
+1	系统性能的监控：使用系统工具   任务管理器、top、  本质上是  /proc文件系统   
+
+2	开发基于console终端的系统监控工具：  使用  linux系统编程 【使用system call——fork--》exec--》wait   （open，write，read，seek）】
+
+3	开发基于GUI的系统监控工具：Qt   ，  QObject，QWidget，面向对象的特征，设计模式【信号和槽】
+
+
+
+
+
+实现案例：界面上的组件（按钮或文字）随着窗口大小改变而改变
+
+
+
+事件就是某种状态改变   resize
+
+事件处理函数就是事件发生时 采取的行动  resizeEvent(QResizeEvent *event)
+
+事件处理函数的第一个参数默认就是事件对象，事件细节封装在该对象中
 
 
 
@@ -2216,3 +2237,35 @@ mysort(ma,5, compareTo)
 
 
 
+
+课堂练习：
+
+简易的组件控制界面：
+
+![image-20231007095655154](image-20231007095655154.png)
+
+car要求不能移出屏幕之外。 鼠标点击   WASD  每次移动5个像素 ，通过键盘的WASD也可以移动，   显示区显示点击或者键盘按下的 键信息
+
+
+
+![image-20231007100526389](image-20231007100526389.png)
+
+
+
+
+
+
+
+
+
+
+
+# UI美化
+
+1	风格设定【不推荐】
+
+2	贴图【利用2D绘图，   pen ，brush绘制】主要用于自定义的图形绘制
+
+3	利用资源图片【引入资源：整体打包发布，优于使用绝对路径引入资源    d:\a.jpg】
+
+4	使用Qss进行修饰和代码的隔离
